UNMLParser.py
# Generated from UNML.g4 by ANTLR 4.7
# encoding: utf-8
from __future__ import print_function
from antlr4 import *
from io import StringIO
import sys



class UNMLParser ( Parser ):

    grammarFileName = "UNML.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ u"<INVALID>", u"<INVALID>", u"';'", u"'='", u"':='", 
                     u"'('", u"')'", u"'{'", u"'}'", u"'['", u"']'", u"'X~'", 
                     u"','", u"':'", u"'begin'", u"'end'", u"'MODEL'", u"'ENDMODEL'", 
                     u"'union'", u"'by'", u"'cross'", u"'in'", u"'within'", 
                     u"'diff'", u"'inter'", u"'symdiff'", u"'set'", u"'vector'", 
                     u"'matrix'", u"'simplex'", u"'minimize'", u"'maximize'", 
                     u"'constrain'", u"'solve'", u"'var'", u"'param'", u"'int'", 
                     u"'double'", u"'string'", u"'boolean'", u"'null'", 
                     u"'if'", u"'else'", u"'then'", u"'while'", u"'break'", 
                     u"'do'", u"'for'", u"'select'", u"'case'", u"'=='", 
                     u"<INVALID>", u"'>'", u"'<'", u"'>='", u"'<='", u"<INVALID>", 
                     u"<INVALID>", u"<INVALID>", u"'true'", u"'false'", 
                     u"'+'", u"'-'", u"'*'", u"'/'", u"'%'", u"<INVALID>", 
                     u"'abs'", u"'atan'", u"'card'", u"'ceil'", u"'cos'", 
                     u"'exp'", u"'floor'", u"'length'", u"'log'", u"'log10'", 
                     u"'round'", u"'sin'", u"'sqrt'", u"'tan'", u"'trunc'", 
                     u"'uniform'", u"'normal'", u"'substr'" ]

    symbolicNames = [ u"<INVALID>", u"COMMENT", u"SEMICOLON", u"ASSING", 
                      u"ALLOCATE", u"LF_PAREN", u"RG_PAREN", u"LF_BRACE", 
                      u"RG_BRACE", u"LF_SPARE", u"RG_SPARE", u"SEPARATOR", 
                      u"COMMA", u"TWO_POINTS", u"DELIMITER_BEGIN", u"DELIMITER_END", 
                      u"MODEL", u"ENDMODEL", u"UNION", u"BY", u"CROSS", 
                      u"IN", u"WITHIN", u"DIFF", u"INTER", u"SYMDIFF", u"SET", 
                      u"VECTOR", u"MATRIX", u"SIMPLEX", u"MINIMIZE", u"MAXIMIZE", 
                      u"CONSTRAIN", u"SOLVE", u"VARIBLE", u"PARAMETER", 
                      u"INT", u"DOUBLE", u"STRING", u"BOOL", u"NULL", u"IF", 
                      u"ELSE", u"THEN", u"WHILE", u"BREAK", u"DO", u"FOR", 
                      u"SELECT", u"CASE", u"EQUAL", u"DIFFERENT", u"GREATER", 
                      u"MINOR", u"GREATER_THAN", u"MINOR_THAN", u"AND", 
                      u"OR", u"NOT", u"TRUE", u"FALSE", u"ADD", u"MINUS", 
                      u"MULT", u"DIV", u"MOD", u"EXP", u"ABS", u"ATAN", 
                      u"CARD", u"CEIL", u"COS", u"EXP_FUN", u"FLOOR", u"LENGTH", 
                      u"LOG", u"LOGTEN", u"ROUND", u"SIN", u"SQRT", u"TAN", 
                      u"TRUNCT", u"UNIFORM", u"NORMAL", u"SUBSTR", u"VAR_ID", 
                      u"ID", u"INTEGER", u"REAL", u"WORD", u"WS", u"OTHER" ]

    RULE_compilationUnit = 0
    RULE_block = 1
    RULE_propositions_sequence = 2
    RULE_proposition = 3
    RULE_assign_statement = 4
    RULE_inequation_operator = 5
    RULE_numeric_literal = 6
    RULE_numeric_unsing = 7
    RULE_building_block = 8
    RULE_function_statement = 9
    RULE_constrain_statement = 10
    RULE_type_objective = 11
    RULE_short_lineal_exp = 12
    RULE_lineal_expression = 13
    RULE_lineal_operator = 14
    RULE_aritmetic_operator = 15
    RULE_numeric_expression = 16
    RULE_aritmetic_expression = 17
    RULE_logical_expression = 18
    RULE_subscripted_parameters = 19
    RULE_function_reference = 20
    RULE_conditional_expression = 21
    RULE_list_of_ids = 22
    RULE_logic_operator = 23
    RULE_prop_solve = 24

    ruleNames =  [ u"compilationUnit", u"block", u"propositions_sequence", 
                   u"proposition", u"assign_statement", u"inequation_operator", 
                   u"numeric_literal", u"numeric_unsing", u"building_block", 
                   u"function_statement", u"constrain_statement", u"type_objective", 
                   u"short_lineal_exp", u"lineal_expression", u"lineal_operator", 
                   u"aritmetic_operator", u"numeric_expression", u"aritmetic_expression", 
                   u"logical_expression", u"subscripted_parameters", u"function_reference", 
                   u"conditional_expression", u"list_of_ids", u"logic_operator", 
                   u"prop_solve" ]

    EOF = Token.EOF
    COMMENT=1
    SEMICOLON=2
    ASSING=3
    ALLOCATE=4
    LF_PAREN=5
    RG_PAREN=6
    LF_BRACE=7
    RG_BRACE=8
    LF_SPARE=9
    RG_SPARE=10
    SEPARATOR=11
    COMMA=12
    TWO_POINTS=13
    DELIMITER_BEGIN=14
    DELIMITER_END=15
    MODEL=16
    ENDMODEL=17
    UNION=18
    BY=19
    CROSS=20
    IN=21
    WITHIN=22
    DIFF=23
    INTER=24
    SYMDIFF=25
    SET=26
    VECTOR=27
    MATRIX=28
    SIMPLEX=29
    MINIMIZE=30
    MAXIMIZE=31
    CONSTRAIN=32
    SOLVE=33
    VARIBLE=34
    PARAMETER=35
    INT=36
    DOUBLE=37
    STRING=38
    BOOL=39
    NULL=40
    IF=41
    ELSE=42
    THEN=43
    WHILE=44
    BREAK=45
    DO=46
    FOR=47
    SELECT=48
    CASE=49
    EQUAL=50
    DIFFERENT=51
    GREATER=52
    MINOR=53
    GREATER_THAN=54
    MINOR_THAN=55
    AND=56
    OR=57
    NOT=58
    TRUE=59
    FALSE=60
    ADD=61
    MINUS=62
    MULT=63
    DIV=64
    MOD=65
    EXP=66
    ABS=67
    ATAN=68
    CARD=69
    CEIL=70
    COS=71
    EXP_FUN=72
    FLOOR=73
    LENGTH=74
    LOG=75
    LOGTEN=76
    ROUND=77
    SIN=78
    SQRT=79
    TAN=80
    TRUNCT=81
    UNIFORM=82
    NORMAL=83
    SUBSTR=84
    VAR_ID=85
    ID=86
    INTEGER=87
    REAL=88
    WORD=89
    WS=90
    OTHER=91

    def __init__(self, input, output=sys.stdout):
        super(UNMLParser, self).__init__(input, output=output)
        self.checkVersion("4.7")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class CompilationUnitContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(UNMLParser.CompilationUnitContext, self).__init__(parent, invokingState)
            self.parser = parser

        def MODEL(self):
            return self.getToken(UNMLParser.MODEL, 0)

        def LF_BRACE(self):
            return self.getToken(UNMLParser.LF_BRACE, 0)

        def block(self):
            return self.getTypedRuleContext(UNMLParser.BlockContext,0)


        def RG_BRACE(self):
            return self.getToken(UNMLParser.RG_BRACE, 0)

        def ENDMODEL(self):
            return self.getToken(UNMLParser.ENDMODEL, 0)

        def lineal_expression(self):
            return self.getTypedRuleContext(UNMLParser.Lineal_expressionContext,0)


        def getRuleIndex(self):
            return UNMLParser.RULE_compilationUnit

        def enterRule(self, listener):
            if hasattr(listener, "enterCompilationUnit"):
                listener.enterCompilationUnit(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitCompilationUnit"):
                listener.exitCompilationUnit(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitCompilationUnit"):
                return visitor.visitCompilationUnit(self)
            else:
                return visitor.visitChildren(self)




    def compilationUnit(self):

        localctx = UNMLParser.CompilationUnitContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_compilationUnit)
        try:
            self.state = 64
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 50
                self.match(UNMLParser.MODEL)
                self.state = 51
                self.match(UNMLParser.LF_BRACE)
                self.state = 52
                self.block()
                self.state = 53
                self.match(UNMLParser.RG_BRACE)
                self.state = 54
                self.match(UNMLParser.ENDMODEL)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 56
                self.match(UNMLParser.MODEL)
                self.state = 57
                self.match(UNMLParser.LF_BRACE)
                self.state = 58
                self.match(UNMLParser.RG_BRACE)
                self.state = 59
                self.match(UNMLParser.ENDMODEL)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 60
                self.match(UNMLParser.MODEL)
                self.state = 61
                self.lineal_expression()
                self.state = 62
                self.match(UNMLParser.ENDMODEL)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class BlockContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(UNMLParser.BlockContext, self).__init__(parent, invokingState)
            self.parser = parser

        def propositions_sequence(self):
            return self.getTypedRuleContext(UNMLParser.Propositions_sequenceContext,0)


        def getRuleIndex(self):
            return UNMLParser.RULE_block

        def enterRule(self, listener):
            if hasattr(listener, "enterBlock"):
                listener.enterBlock(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitBlock"):
                listener.exitBlock(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitBlock"):
                return visitor.visitBlock(self)
            else:
                return visitor.visitChildren(self)




    def block(self):

        localctx = UNMLParser.BlockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_block)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 66
            self.propositions_sequence()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Propositions_sequenceContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(UNMLParser.Propositions_sequenceContext, self).__init__(parent, invokingState)
            self.parser = parser

        def proposition(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(UNMLParser.PropositionContext)
            else:
                return self.getTypedRuleContext(UNMLParser.PropositionContext,i)


        def getRuleIndex(self):
            return UNMLParser.RULE_propositions_sequence

        def enterRule(self, listener):
            if hasattr(listener, "enterPropositions_sequence"):
                listener.enterPropositions_sequence(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitPropositions_sequence"):
                listener.exitPropositions_sequence(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitPropositions_sequence"):
                return visitor.visitPropositions_sequence(self)
            else:
                return visitor.visitChildren(self)




    def propositions_sequence(self):

        localctx = UNMLParser.Propositions_sequenceContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_propositions_sequence)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 71
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 68
                    self.proposition() 
                self.state = 73
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

            self.state = 74
            self.proposition()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PropositionContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(UNMLParser.PropositionContext, self).__init__(parent, invokingState)
            self.parser = parser

        def prop_solve(self):
            return self.getTypedRuleContext(UNMLParser.Prop_solveContext,0)


        def assign_statement(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(UNMLParser.Assign_statementContext)
            else:
                return self.getTypedRuleContext(UNMLParser.Assign_statementContext,i)


        def building_block(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(UNMLParser.Building_blockContext)
            else:
                return self.getTypedRuleContext(UNMLParser.Building_blockContext,i)


        def getRuleIndex(self):
            return UNMLParser.RULE_proposition

        def enterRule(self, listener):
            if hasattr(listener, "enterProposition"):
                listener.enterProposition(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitProposition"):
                listener.exitProposition(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitProposition"):
                return visitor.visitProposition(self)
            else:
                return visitor.visitChildren(self)




    def proposition(self):

        localctx = UNMLParser.PropositionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_proposition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 77 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 76
                self.assign_statement()
                self.state = 79 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==UNMLParser.VARIBLE or _la==UNMLParser.PARAMETER):
                    break

            self.state = 82 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 81
                self.building_block()
                self.state = 84 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==UNMLParser.DELIMITER_BEGIN):
                    break

            self.state = 86
            self.prop_solve()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Assign_statementContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(UNMLParser.Assign_statementContext, self).__init__(parent, invokingState)
            self.parser = parser

        def VARIBLE(self):
            return self.getToken(UNMLParser.VARIBLE, 0)

        def VAR_ID(self):
            return self.getToken(UNMLParser.VAR_ID, 0)

        def SEMICOLON(self):
            return self.getToken(UNMLParser.SEMICOLON, 0)

        def PARAMETER(self):
            return self.getToken(UNMLParser.PARAMETER, 0)

        def ID(self):
            return self.getToken(UNMLParser.ID, 0)

        def ALLOCATE(self):
            return self.getToken(UNMLParser.ALLOCATE, 0)

        def numeric_literal(self):
            return self.getTypedRuleContext(UNMLParser.Numeric_literalContext,0)


        def getRuleIndex(self):
            return UNMLParser.RULE_assign_statement

        def enterRule(self, listener):
            if hasattr(listener, "enterAssign_statement"):
                listener.enterAssign_statement(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitAssign_statement"):
                listener.exitAssign_statement(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitAssign_statement"):
                return visitor.visitAssign_statement(self)
            else:
                return visitor.visitChildren(self)




    def assign_statement(self):

        localctx = UNMLParser.Assign_statementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_assign_statement)
        self._la = 0 # Token type
        try:
            self.state = 98
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [UNMLParser.VARIBLE]:
                self.enterOuterAlt(localctx, 1)
                self.state = 88
                self.match(UNMLParser.VARIBLE)
                self.state = 89
                self.match(UNMLParser.VAR_ID)
                self.state = 90
                self.match(UNMLParser.SEMICOLON)
                pass
            elif token in [UNMLParser.PARAMETER]:
                self.enterOuterAlt(localctx, 2)
                self.state = 91
                self.match(UNMLParser.PARAMETER)
                self.state = 92
                self.match(UNMLParser.ID)
                self.state = 95
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==UNMLParser.ALLOCATE:
                    self.state = 93
                    self.match(UNMLParser.ALLOCATE)
                    self.state = 94
                    self.numeric_literal()


                self.state = 97
                self.match(UNMLParser.SEMICOLON)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Inequation_operatorContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(UNMLParser.Inequation_operatorContext, self).__init__(parent, invokingState)
            self.parser = parser

        def GREATER_THAN(self):
            return self.getToken(UNMLParser.GREATER_THAN, 0)

        def ASSING(self):
            return self.getToken(UNMLParser.ASSING, 0)

        def MINOR_THAN(self):
            return self.getToken(UNMLParser.MINOR_THAN, 0)

        def getRuleIndex(self):
            return UNMLParser.RULE_inequation_operator

        def enterRule(self, listener):
            if hasattr(listener, "enterInequation_operator"):
                listener.enterInequation_operator(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitInequation_operator"):
                listener.exitInequation_operator(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitInequation_operator"):
                return visitor.visitInequation_operator(self)
            else:
                return visitor.visitChildren(self)




    def inequation_operator(self):

        localctx = UNMLParser.Inequation_operatorContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_inequation_operator)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << UNMLParser.ASSING) | (1 << UNMLParser.GREATER_THAN) | (1 << UNMLParser.MINOR_THAN))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Numeric_literalContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(UNMLParser.Numeric_literalContext, self).__init__(parent, invokingState)
            self.parser = parser
            self.OP = None # Token

        def numeric_unsing(self):
            return self.getTypedRuleContext(UNMLParser.Numeric_unsingContext,0)


        def ADD(self):
            return self.getToken(UNMLParser.ADD, 0)

        def MINUS(self):
            return self.getToken(UNMLParser.MINUS, 0)

        def ID(self):
            return self.getToken(UNMLParser.ID, 0)

        def getRuleIndex(self):
            return UNMLParser.RULE_numeric_literal

        def enterRule(self, listener):
            if hasattr(listener, "enterNumeric_literal"):
                listener.enterNumeric_literal(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitNumeric_literal"):
                listener.exitNumeric_literal(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitNumeric_literal"):
                return visitor.visitNumeric_literal(self)
            else:
                return visitor.visitChildren(self)




    def numeric_literal(self):

        localctx = UNMLParser.Numeric_literalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_numeric_literal)
        self._la = 0 # Token type
        try:
            self.state = 107
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [UNMLParser.ADD, UNMLParser.MINUS, UNMLParser.INTEGER, UNMLParser.REAL]:
                self.enterOuterAlt(localctx, 1)
                self.state = 103
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==UNMLParser.ADD or _la==UNMLParser.MINUS:
                    self.state = 102
                    localctx.OP = self._input.LT(1)
                    _la = self._input.LA(1)
                    if not(_la==UNMLParser.ADD or _la==UNMLParser.MINUS):
                        localctx.OP = self._errHandler.recoverInline(self)
                    else:
                        self._errHandler.reportMatch(self)
                        self.consume()


                self.state = 105
                self.numeric_unsing()
                pass
            elif token in [UNMLParser.ID]:
                self.enterOuterAlt(localctx, 2)
                self.state = 106
                self.match(UNMLParser.ID)
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Numeric_unsingContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(UNMLParser.Numeric_unsingContext, self).__init__(parent, invokingState)
            self.parser = parser

        def INTEGER(self):
            return self.getToken(UNMLParser.INTEGER, 0)

        def REAL(self):
            return self.getToken(UNMLParser.REAL, 0)

        def getRuleIndex(self):
            return UNMLParser.RULE_numeric_unsing

        def enterRule(self, listener):
            if hasattr(listener, "enterNumeric_unsing"):
                listener.enterNumeric_unsing(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitNumeric_unsing"):
                listener.exitNumeric_unsing(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitNumeric_unsing"):
                return visitor.visitNumeric_unsing(self)
            else:
                return visitor.visitChildren(self)




    def numeric_unsing(self):

        localctx = UNMLParser.Numeric_unsingContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_numeric_unsing)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 109
            _la = self._input.LA(1)
            if not(_la==UNMLParser.INTEGER or _la==UNMLParser.REAL):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Building_blockContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(UNMLParser.Building_blockContext, self).__init__(parent, invokingState)
            self.parser = parser

        def DELIMITER_BEGIN(self):
            return self.getToken(UNMLParser.DELIMITER_BEGIN, 0)

        def function_statement(self):
            return self.getTypedRuleContext(UNMLParser.Function_statementContext,0)


        def DELIMITER_END(self):
            return self.getToken(UNMLParser.DELIMITER_END, 0)

        def constrain_statement(self, i=None):
            if i is None:
                return self.getTypedRuleContexts(UNMLParser.Constrain_statementContext)
            else:
                return self.getTypedRuleContext(UNMLParser.Constrain_statementContext,i)


        def getRuleIndex(self):
            return UNMLParser.RULE_building_block

        def enterRule(self, listener):
            if hasattr(listener, "enterBuilding_block"):
                listener.enterBuilding_block(self)

        def exitRule(self, listener):
            if hasattr(listener, "exitBuilding_block"):
                listener.exitBuilding_block(self)

        def accept(self, visitor):
            if hasattr(visitor, "visitBuilding_block"):
                return visitor.visitBuilding_block(self)
            else:
                return visitor.visitChildren(self)




    def building_block(self):

        localctx = UNMLParser.Building_blockContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_building_block)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self.match(UNMLParser.DELIMITER_BEGIN)
            self.state = 112
            self.function_statement()
            self.state = 116
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==UNMLParser.CONSTRAIN:
                self.state = 113
                self.constrain_statement()
                self.state = 118
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 119
            self.match(UNMLParser.DELIMITER_END)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class Function_statementContext(ParserRuleContext):

        def __init__(self, parser, parent=None, invokingState=-1):
            super(UNMLParser.Function_statementContext, self).__init__(parent, invokingState)
            self.parser = parser

        def type_objective(self):
            return self.getTypedRuleContext(UNMLParser.Type_objectiveContext,0)


        def ID(self):
            return self.getToken(UNMLParser.ID, 0)

        def TWO_POINTS(self):
            return self.getToken(UNMLParser.TWO_POINTS, 0)

        def lineal_expression(self):
            return self.getTypedRuleContext(UNMLParser.Lineal_expressionContext,0)


        def SEMICOLON(self):
            return self.getToken(UNMLParser.SEMICOLON, 0)

        def getRuleIndex(self):
            return UNMLParser.RULE_function_statement

        def enterRule(self, listener):
            if hasattr(listener, "enterFunction_statement"):
                listener.enterFunction_statement(self)
